fixed spacing on home page cards

--- a/GoodBuy-Laravel/public/css/styles.css
+++ b/GoodBuy-Laravel/public/css/styles.css
@@ -308,3 +308,7 @@ main.py-4{
 .mb-1, .my-1 {
    margin-bottom: 0 !important;
 }
+
+.main-cards{
+	margin: 10px 0px;
+}
